force-app/main/default/objects/Form_Submission__c/fields/Has_Degree__c.field-meta.xml
<CustomField>
    <fullName>Has_Degree__c</fullName>
    <label>Has Degree or Training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>