force-app/main/default/objects/Form_Submission__c/fields/Master_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Name__c</fullName>
    <label>Master Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>