force-app/main/default/objects/Form_Submission__c/fields/Place_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Residence__c</fullName>
    <label>Place of Residence</label>
    <type>TextArea</type>
</CustomField>