force-app/main/default/objects/Form_Submission__c/fields/Portuguese_Level__c.field-meta.xml
<CustomField>
    <fullName>Portuguese_Level__c</fullName>
    <label>Portuguese Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Iniciante (A1, A2)</fullName>
            </value>
            <value>
                <fullName>Intermédio (B1, B2)</fullName>
            </value>
            <value>
                <fullName>Avançado (C1, C2)</fullName>
            </value>
            <value>
                <fullName>Advanced (C1, C2)</fullName>
            </value>
            <value>
                <fullName>Beginner (A1, A2)</fullName>
            </value>
            <value>
                <fullName>Intermediate (B1, B2)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>