force-app/main/default/objects/Form_Submission__c/fields/Raise_N_Go_News__c.field-meta.xml
<CustomField>
    <fullName>Raise_N_Go_News__c</fullName>
    <label>Raise N&apos;Go News</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>