force-app/main/default/objects/Form_Submission__c/fields/Seguranca_Social__c.field-meta.xml
<CustomField>
    <fullName>Seguranca_Social__c</fullName>
    <label>Segurança Social</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>