force-app/main/default/objects/Form_Submission__c/fields/Surnames__c.field-meta.xml
<CustomField>
    <fullName>Surnames__c</fullName>
    <label>Surnames</label>
    <length>255</length>
    <type>Text</type>
</CustomField>