force-app/main/default/objects/Form_Submission__c/fields/YearsOfExperience__c.field-meta.xml
<CustomField>
    <fullName>YearsOfExperience__c</fullName>
    <label>YearsOfExperience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1-2</fullName>
            </value>
            <value>
                <fullName>3-5</fullName>
            </value>
            <value>
                <fullName>&gt;5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>